yaml_conf/kibana-dung-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-dung
  namespace: elk-dung
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: kibana-dung.vnpost.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-dung-kibana
                port:
                  number: 5601
